<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XKCD Viewer</string>
    <string name="title_activity_main_viewer">XKCD Viewer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="jump_to">Jump To</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
    <string name="random">Random</string>
    <string name="about">About</string>
</resources>